# vfw-doc

./: CMakeLists.txt  Doxyfile  README.md  make.bat
docs/: index.html
docs/doctrees/: about.doctree  csv.doctree  csvOutput.doctree  environment.pickle  index.doctree  installation.doctree  rest.doctree  restOutput.doctree  vxa_feed.h.doctree  vxa_util.h.doctree
docs/doxygen/xml/: dir_31d2163804e741053ae1f0c0a592d159.xml  index.xml  namespacestd.xml  namespacevxa__feed.xml  namespacevxa__util.xml  structvxa__feed_1_1_auction_clearing_price.xml  structvxa__feed_1_1_book_level_entry.xml  structvxa__feed_1_1_channel_reset_entry.xml  structvxa__feed_1_1_daily_statistics_entry.xml  structvxa__feed_1_1_incremental_order_book_entry.xml  structvxa__feed_1_1_investigated_trade.xml  structvxa__feed_1_1_limits_banding_entry.xml  structvxa__feed_1_1_security_status_entry.xml  structvxa__feed_1_1_session_statistics.xml  structvxa__feed_1_1_trade_match_entry.xml  structvxa__feed_1_1_trade_summary_entry.xml  structvxa__feed_1_1_transaction_marker_entry.xml  structvxa__feed_1_1_volume_update_entry.xml  (+6 more)
docs/html/: .buildinfo  about.html  csv.html  csvOutput.html  genindex.html  index.html  installation.html  objects.inv  rest.html  restOutput.html  search.html  searchindex.js  vxa_feed.h.html  vxa_util.h.html
src/: about.rst  conf.py  csv.rst  csvOutput.rst  index.rst  installation.rst  rest.rst  restOutput.rst  vxa_util.h.rst
src/_static/: fixBreathe.css
vxa-cmk/: CMakeLists.txt  vxa-cmk.cpp  vxa-cmk.h  vxa_feed.h  vxa_util.h
vxp-cmk/: CMakeLists.txt  vxp-cmk.h
(+4 files in other folders)
